crudservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: crudservice
  name: crudservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudservice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: crudservice
    spec:
      containers:
      - image: wlanboy/crudservice
        name: crudservice
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: crudservice
  name: crudservice
spec:
  ports:
  - name: 8002-8002
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    app: crudservice
  type: ClusterIP
status:
  loadBalancer: {}
