crudservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: crudservice-service
  name: crudservice-service
  namespace: crud
spec:
  selector:
    app: crudservice
  ports:
  - name: 8002-8002
    port: 8002
    protocol: TCP
    targetPort: 8002
#  type: ClusterIP
  type: LoadBalancer
#  type: NodePort
