crudservice-ingress-host.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-node-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "hello.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-node
            port:
              number: 8080
