crudservice-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crudservice-ingress
  namespace: crud
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /crudservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: crudservice-service
            port:
              number: 8002
