ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /crudservice
        pathType: Prefix
        backend:
          service:
            name: crudservice-service
            port:
              number: 8002
